fixing drag/drop issue in builder where draggables are not seen at correct position and z-index
--HG--
branch : emailTemplateBuilder

--- a/app/themes/default/less/builder-iframe-tools.less
+++ b/app/themes/default/less/builder-iframe-tools.less
@@ -147,6 +147,14 @@ td.wrapper{
 	}
 }
 
+.draggable-builder-element{
+	z-index: 9999999;
+	box-shadow: inset 0 0 8px 0 @themeColor  !important;
+	.builder-element-toolbar{
+		visibility: visible;
+	}
+}
+
 .element-wrapper{
 	&:before,
 	&:after{
